# treeflow

./: .dockerignore  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  base_likelihood.py  beagle_likelihood.py  conftest.py  environment.yml  grads.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.py  setup.cfg  setup.py  setup.sh  substitution_model.py  tensorflow_likelihood.py  tensorflow_scan_likelihood.py
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: benchmark.yaml  build-docs.yaml  docker-publish.yaml  native-op.yaml  publish-docs.yaml  pytest.yaml
data/: analysis-tree.nwk  hello.nwk  sim-seq.fasta  sim-seq.newick
dev/: requirements.txt
docs/: Makefile  genindex.html  index.html  model-definition.md  objects.inv  py-modindex.html  treeflow.acceleration.html  treeflow.cli.html  treeflow.distributions.markov_chain.html  treeflow.distributions.tree.birthdeath.html  treeflow.distributions.tree.coalescent.html  treeflow.distributions.tree.html  treeflow.evolution.substitution.html  treeflow.evolution.substitution.nucleotide.html  treeflow.html  treeflow.model.approximation.html  treeflow.model.html  treeflow.traversal.html  treeflow.tree.topology.html  treeflow.vi.optimizers.html
docs-src/source/: index.rst  treeflow.debug.rst  treeflow.vi.optimizers.rst
docs/_sources/: treeflow.evolution.calibration.rst.txt  treeflow.tree.unrooted.rst.txt
docs/source/: cli.rst  cli.treeflow_dta_hmc.rst  cli.treeflow_hmc.rst  cli.treeflow_ml.rst  cli.treeflow_vi.rst  conf.py  index.rst  installation.md  model-definition.md  modules.rst  rates-and-dates.nblink  treeflow.acceleration.bito.beagle.rst  treeflow.acceleration.bito.instance.rst  treeflow.acceleration.bito.ratio_transform.rst  treeflow.acceleration.rst  (+102 more)
docs_html/: .buildinfo  modules.html  search.html  searchindex.js  treeflow.acceleration.bito.html  treeflow.bijectors.html  treeflow.debug.html  treeflow.distributions.html  treeflow.evolution.calibration.html  treeflow.evolution.html  treeflow.tf_util.html  treeflow.tree.html  treeflow.tree.rooted.html  treeflow.tree.unrooted.html  treeflow.vi.convergence_criteria.html  treeflow.vi.html
examples/: README.md  carnivores.ipynb  h3n2-model.yaml  h3n2-vi.sh  native_likelihood_benchmark.ipynb  native_likelihood_benchmark.py  rates-and-dates-model.yaml  rates-and-dates.ipynb  tree_traversal_backends_benchmark.ipynb
experiments/: README.md  advi_iaf.ipynb  advi_stability.ipynb  conditional_clade_gradient_estimators.ipynb  conditional_clade_phylo_estimators.ipynb  convergence-experiment.ipynb  hmc_tree_geometry.md  native_block_size_benchmark.ipynb  native_likelihood_scaling_analysis.md  native_vs_tf_vi_validation.ipynb  tree_traversal_backends_benchmark.ipynb  validate_hmc_birth_death.ipynb
fixtures/: data_fixtures.py  substitution_fixtures.py  tree_fixtures.py
notebook/: benchmark.ipynb  demo.ipynb  grads.ipynb  product-bijector.ipynb  sim.ipynb
script/: demo.py  get-prior-params.R
test/: conftest.py  test_beagle.py  test_birth_death.py  test_clock_approx.py  test_coalescent.py  test_libsbn_parsing.py  test_libsbn_transform.py  test_likelihood.py  test_lognormal_conjugate.py  test_model.py  test_normal_conjugate.py  test_priors.py  test_sequences.py  test_subst_model_util.py  test_subst_models.py  test_transform.py  test_tree_processing.py  test_vi.py
treeflow/: __init__.py  base_likelihood.py  beagle.py  birthdeath.py  clock_approx.py  coalescent.py  libsbn.py  model.py  priors.py  sequences.py  site_model.py  substitution_model.py  tensorflow_likelihood.py  tensorflow_scan_likelihood.py  tf_util.py  tree.py  tree_processing.py  tree_transform.py  vi.py
(+264 files in other folders)
