[metadata]
name = treeflow
version = 0.0.1
url = https://github.com/christiaanjs/treeflow
author = Christiaan Swanepoel
author_email = christiaan.j.s@gmail.com
keywords = phylogenetics, tensorflow
description = Phylogenetics in Tensorflow
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
python_requires = >=3.7
packages = find:
package_dir =
    =.
install_requires =
    tensorflow
    tensorflow_probability
    numpy
    ete3


[options.entry_points]
console_scripts =
    treeflow_benchmark = treeflow.cli.benchmark:treeflow_benchmark


[options.extras_require]
test =
    pytest
accelerated = 
    bito