[metadata]
name = treeflow
version = 0.0.1
url = https://github.com/christiaanjs/treeflow
author = Christiaan Swanepoel
author_email = christiaan.j.s@gmail.com
keywords = phylogenetics, tensorflow
description = Phylogenetics in Tensorflow
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
python_requires = >=3.7
packages = find:
package_dir =
    =.
install_requires =
    tensorflow>=2.5.0
    tensorflow_probability>=0.13.0
    numpy>=1.19
    ete3>=3.1.2
    attrs>=21.1.0
    PyYAML>=6.0
    dendropy>=4.5.2
    click>=8.1.2
test_requires = 
    pandas>=1.4.1
    pytest>=7.1.2

[options.entry_points]
console_scripts =
    treeflow_benchmark = treeflow.cli.benchmark:treeflow_benchmark
    treeflow_vi = treeflow.cli.vi:treeflow_vi


[options.extras_require]
benchmark = 
    memory_profiler
test =
    pytest
accelerated = 
    bito